[package]
name = "nabo"
version = "0.5.0"
edition = "2021"
authors = ["Stéphane Magnenat <stephane.magnenat@enlightware.ch>", "Hannes Sommer <hannes.sommer@enlightware.ch>"]
license = "MIT OR Apache-2.0"
description = "A fast K Nearest Neighbor (KNN) library for low-dimensional spaces"
repository = "https://github.com/enlightware/nabo-rs"
homepage = "https://github.com/enlightware/nabo-rs"
readme = "README.md"
keywords = ["nearest_neighbor", "K-D_tree", "data_structures", "KNN", "no_std"]
categories = ["mathematics", "science", "computer-vision", "multimedia", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rand"]
rand = ["dep:rand"]

[dependencies]
partition = "0.1.2"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
ordered-float = { version = "4.6", default-features = false, features = ["libm"] }
rand = { version = "0.8", optional = true }

[dev-dependencies]
rand = "0.8"
float-cmp = "0.9"
criterion = "0.5"

[profile.release]
debug = 1

[[bench]]
name = "candidate_container_comparison"
harness = false
required-features = ["rand"]

[[bench]]
name = "simple"
harness = false
required-features = ["rand"]
